# canzero-app

./: CMakeLists.txt
.cache/clangd/index/: FreeRTOS.h.1FB1D4AD894EE89B.idx  FreeRTOSConfig.h.CA2B31BEF23A31FA.idx  cmsis_compiler.h.4E74BD1C2DC5A381.idx  cmsis_gcc.h.12F1D20FF6742429.idx  cmsis_os.h.48BB3745B6CAA368.idx  cmsis_os2.c.B0050EEFAD8F36A8.idx  cmsis_os2.h.925E70A03EAF209F.idx  cmsis_version.h.C2AA8423295FCACC.idx  core_cm4.h.CECE826B440BE9A4.idx  croutine.c.60017CA42A4662A3.idx  croutine.h.CF7474A663CBB03A.idx  deprecated_definitions.h.C92979AB8324336E.idx  event_groups.c.67B51FC09B458259.idx  event_groups.h.72BE7B0C3F76357F.idx  freertos.c.ED2507A7FB6FA2B0.idx  freertos_mpool.h.24656003B08AEE86.idx  freertos_os2.h.26A84CC50FA00B90.idx  heap_4.c.34607CB0F9A86D68.idx  lib.c.DC516F3EC5746F74.idx  list.c.7461D4EAAF670243.idx  list.h.B0D6BFB33D009EE5.idx  main.c.A1DFADDB39B00EFD.idx  main.c.A835370799CA6DFC.idx  main.c.C9FD54A37FB90374.idx  main.h.5C1CECCADE085C09.idx  mpu_armv7.h.1DE393B0A431F342.idx  mpu_wrappers.h.C77F23CB06AB571A.idx  port.c.58807F1E4DA8F29A.idx  portable.h.176FA282AF2D37E3.idx  portmacro.h.AD1263FE9F4F5363.idx  projdefs.h.B12B841C91A7020C.idx  queue.c.E26CDF0B03DDDF17.idx  queue.h.6FFA996D0DE22AFF.idx  semphr.h.2C1EEB10DBB131AF.idx  stack_macros.h.BDFB719DC93A4D09.idx  stm32_hal_legacy.h.C30D63E041CD3BFB.idx  stm32f407xx.h.613447851A3392F0.idx  stm32f4xx.h.FDAB223DA39F3F8F.idx  stm32f4xx_hal.c.3DDCB6AEA1E66417.idx  stm32f4xx_hal.h.8A9C5B573F2571D9.idx  (+122 more)
cubemx/: .mxproject  Makefile  cubemx.ioc  startup_stm32f407xx.s
cubemx/Core/Src/: main.c
